# d-asa

./: .algokit.toml  .dockerignore  .env.localnet.template  .env.testnet.template  .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  book.toml  d-asa  pyproject.toml
.algokit/: .copier-answers.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  contract-request.md
.github/workflows/: d-asa-cd.yaml  d-asa-ci.yaml  d-asa-latest-avm.yaml  docs-cd.yaml  docs-ci.yaml
docs/: CONTRIBUTIONS.md  COVER.md  INTRO.md  LICENSE.md  READING-GUIDELINES.md  SUMMARY.md  abstract.md  contract-section.md  contract-type.md  contributors.md  coupons-payment.md  d-asa.md  day-count-convention.md  definitions.md  denomination.md  early-repayment-options.md  early-repayment.md  interests.md  interface-asset-config.md  interface-asset-transfer.md  interface-assign-role.md  interface-close-account.md  interface-early-repayment.md  interface-get-account-info.md  interface-get-account-units-current-value.md  interface-get-account-units-value.md  interface-get-amortizing-rates.md  interface-get-asset-info.md  interface-get-asset-metadata.md  interface-get-coupon-amount.md  interface-get-coupon-principal-amount.md  interface-get-coupon-rates.md  interface-get-coupon-status.md  interface-get-default-status.md  interface-get-early-repayment-schedule.md  interface-get-payment-amount.md  interface-get-role-config.md  interface-get-roles.md  interface-get-secondary-market-schedule.md  interface-get-time-events.md  (+47 more)
docs/.include/: interface.asset-config.json  interface.close-account.json  interface.early-repayment.json  interface.get-account-info.json  interface.get-asset-info.json  interface.get-asset-metadata.json  interface.get-payment-amount.json  interface.get-secondary-market-schedule.json  interface.get-time-events.json  interface.get-time-periods.json  interface.open-account.json  interface.rbac-assign-role.json  interface.rbac-revoke-role.json  interface.revoke-role.json  interface.set-asset-suspension-status.json  interface.set-variable-interest-rate.json  interface.update-global-unit-value.json  interface.update-time-events.json
docs/_include/: styles.md
docs/asset/: get-early-repayment-schedule.md
docs/events/: events.md
docs/getters/: interface-get-account-info.md  interface-get-account-units-current-value.md  interface-get-account-units-value.md  interface-get-amortizing-rates.md  interface-get-asset-info.md  interface-get-asset-metadata.md  interface-get-coupon-rates.md  interface-get-coupon-status.md  interface-get-early-repayment-schedule.md  interface-get-payment-amount.md  interface-get-role-config.md  interface-get-roles.md  interface-get-secondary-market-schedule.md  interface-get-time-events.md  interface-get-time-periods.md
docs/implementation/: architecture.md  deepwiki.md  ref-perpetual-bond.md  reference-implementation-tests.md  reference-implementation.md  tests.md
docs/include/: interface.asset-config.json  interface.asset-transfer.json  interface.assign-role.json  interface.early-repayment.json  interface.get-account-info.json  interface.get-account-units-current-value.json  interface.get-account-units-value.json  interface.get-amortizing-rates.json  interface.get-asset-info.json  interface.get-asset-metadata.json  interface.get-coupon-amount.json  interface.get-coupon-principal-amount.json  interface.get-coupon-rates.json  interface.get-coupon-status.json  interface.get-default-status.json  interface.get-early-repayment-schedule.json  interface.get-payment-amount.json  interface.get-role-config.json  interface.get-roles.json  interface.pay-coupon.json  interface.pay-principal.json  interface.primary-distribution.json  interface.set-account-suspension-status.json  interface.set-amortizing-rates.json  interface.set-asset-metadata.json  interface.set-default-status.json  interface.set-early-repayment-option.json  interface.set-early-repayment-time-events.json  interface.set-secondary-time-events.json  interface.update-coupon-rates.json  interface.update-global-unit-value.json  interface.update-interest-rate.json  interface.update-time-events.json  interface.update-time-periods.json  interface.update-total-units.json
docs/interfaces/: overview.md  types.md
examples/: README.md  _support.py  pam_fixed_coupon_bond.ipynb  pam_zero_coupon_bond.ipynb
modules/: __init__.py  accounting.py  actus_kernel.py  kernel.py  payment_agent.py  rbac.py  transfer_agent.py
smart_contracts/: __main__.py  abi_types.py  config.py  constants.py  enums.py  errors.py  events.py  mixin_composition.py  types.py
src/: __init__.py  _dasa_mappers.py  contracts.py  dasa.py  day_count.py  localnet.py  models.py  normalization.py  pam_lifecycle.py  registry.py  schedule.py  showcase.py  unix_time.py
tests/: conftest.py  conftest_helpers.py  test_mixin_composition_guards.py  test_utils.py  utils.py
(+367 files in other folders)
