[project]
name = "d-asa"
version = "0.21.0"
description = "Debt Algorand Standard Application"
license = "AGPL-3.0"
readme = "README.md"
requires-python = ">=3.13,<4.0"
authors = [
  { name = "cusma", email = "cosimo.bassi@gmail.com" },
]
maintainers = [
  { name = "cusma", email = "cosimo.bassi@gmail.com" },
]
dependencies = [
  "algokit-utils>=4.2.3,<5.0.0",
]
keywords = [
  "algorand",
  "blockchain",
  "debt",
  "finance",
  "tokenization",
  "actus",
]

[project.urls]
Documentation = "https://cusma.github.io/d-asa/"
Repository = "https://github.com/cusma/d-asa"

[tool.poetry]
packages = [
  { include = "d_asa", from = "src" },
]
include = [
  { path = "src/d_asa/artifacts/*.json", format = ["sdist", "wheel"] },
  { path = "src/d_asa/py.typed", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

[tool.poetry.group.dev.dependencies]
algokit-client-generator = "^2.2.0"
algorand-python = "^3.4.0"
black = { extras = ["d"], version = "^26.3.1" }
ruff = "^0.15.5"
mypy = "^1.19.1"
pytest = "^9.0.3"
pytest-cov = "^7.0.0"
pytest-sugar = "^1.1.1"
pip-audit = "^2.10.0"
pre-commit = "^4.5.1"
puyapy = "^5.7.1"
urllib3 = "^2.6.3"
pip = "^26.0.1"
python-dotenv = "^1.2.2"

[tool.poetry.group.notebooks]
optional = true

[tool.poetry.group.notebooks.dependencies]
ipykernel = "^7.2.0"
jupyterlab = "^4.4.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.select = [
  "E",
  "F",
  "ANN",
  "UP",
  "N",
  "C4",
  "B",
  "A",
  "YTT",
  "W",
  "FBT",
  "Q",
  "RUF",
  "I",
]
lint.unfixable = ["B", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN001", "ANN401", "E501"]
"smart_contracts/abi_types.py" = ["UP040"]
"smart_contracts/events.py" = ["UP040"]
"modules/**" = ["UP040"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
markers = [
  "showcase: narrative LocalNet walkthroughs that are excluded from the default test run",
]

[tool.mypy]
files = "smart_contracts/"
python_version = "3.13"
mypy_path = "src"
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
extra_checks = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
untyped_calls_exclude = ["algosdk"]

[[tool.mypy.overrides]]
module = "smart_contracts.d_asa.deploy_config"
disallow_any_unimported = false
disallow_any_expr = false
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_any_expr = false
